--- a/app/home.html
+++ b/app/home.html
@@ -3,7 +3,7 @@
     <link href="home.css" rel="stylesheet" type="text/css" >
     <head>
         <meta charset="UTF-8">
-        <title>Title</title>
+        <title>Tutorial Kit Robótico</title>
     </head>
     <body>
         <div>
@@ -22,7 +22,9 @@
             <div class="gear_image">
             </div>
             <div class="circle_begin">
+                <a href="models.html">
                 <iniciar>Iniciar</iniciar>
+                </a>
             </div>
             <div class="circle_exit">
                 <salir>Salir</salir>
