--- a/app/models.html
+++ b/app/models.html
@@ -1,22 +1,106 @@
 <!DOCTYPE html>
 <html lang="sp">
-        <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    
+    <link rel="stylesheet" href="CSS/bootstrap.min.css">
+    <script scr="js/bootstrap.min.js"></script>
     <link href="CSS/models.css" rel="stylesheet" type="text/css" >
     <head>
         <meta charset="UTF-8">
     </head>
     <body>
         <div>
-            <div class="top">
-                <div class="home">
-                    <a href="home.html">
-                        <img src="images/home.png" width="35" height="35">
-                    </a>
-                </div>
-                <div class="option">
-                    Seleccioná el modelo que querás trabajar
-                </div>
+          <!-- Top of the screen. Contains a home button and an option's text--> 
+          <div class="top">
+            <!-- Home button --> 
+            <div class="home">
+              <a href="home.html">
+                  <img src="images/home.png" width="35" height="35">
+              </a>
             </div>
+
+            <!-- Option's text--> 
+            <div class="option">
+                Seleccioná el modelo que querás trabajar
+            </div>
+            </div>
+
+            <!-- Display the models by levels --> 
+            <section class="models-option">
+              <div class="row">
+                <div class="col-sm-4">
+                  <div class="card text-center">
+                    <div class="card-body">
+                    <img class="card-img-top" src="images/gears0.png"  alt="Tutoriales básicos">
+                    <h5 class="card-title">Nivel 0</h5>
+                    <p class="card-text">Tutoriales básicos</br></p>
+                    </br>
+                    <a href="#" class="btn btn-primary">Comenzar</a>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-sm-4">
+                  <div class="card text-center">
+                    <div class="card-body">
+                      <img class="card-img-top" src="images/nvl1.png"  alt="Card image cap">
+                      <h5 class="card-title">Nivel 1</h5>
+                      <p class="card-text">Micropiano</br> 
+                      Caballo</p>
+                      <a href="#" class="btn btn-primary">Comenzar</a>
+                    </div>
+                  </div>
+                </div>
+                
+                <div class="col-sm-4">
+                  <div class="card text-center">
+                    <div class="card-body">
+                      <img class="card-img-top" src="images/nvl2.png"  alt="Card image cap">
+                      <h5 class="card-title">Nivel 2</h5>
+                      <p class="card-text">Generador eléctrico</br> 
+                      Motor</p>
+                      <a href="#" class="btn btn-primary">Comenzar</a>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-sm-4">
+                  <div class="card text-center">
+                    <div class="card-body">
+                      <img class="card-img-top" src="images/nvl3.png"  alt="Card image cap">
+                      <h5 class="card-title">Nivel 3</h5>
+                      <p class="card-text">Girabot</p>
+                      </br>
+                      <a href="#" class="btn btn-primary">Comenzar</a>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-sm-4">
+                  <div class="card text-center">
+                    <div class="card-body">
+                      <img class="card-img-top" src="images/brazo.png"  alt="Card image cap">
+                      <h5 class="card-title">Nivel 4</h5>
+                      <p class="card-text">Brazo mecánico</p>
+                      </br>
+                      <a href="#" class="btn btn-primary">Comenzar</a>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-sm-4">
+                  <div class="card text-center">
+                    <div class="card-body">
+                      <img class="card-img-top" src="images/carro.png"  alt="Card image cap">
+                      <h5 class="card-title">Nivel 5</h5>
+                      <p class="card-text">Carro</p>
+                      </br>
+                      <a href="#" class="btn btn-primary">Comenzar</a>
+                    </div>
+                  </div>
+                </div>
+              </div> <!-- Row termination--> 
+          </section> <!-- Section termination--> 
         </div>
     </body>
 </html>
