Fixes to models screen

--- a/app/models.html
+++ b/app/models.html
@@ -27,79 +27,78 @@
 
             <!-- Display the models by levels --> 
             <section class="models-option">
-              <div class="row">
-                <div class="col-sm-4">
-                  <div class="card text-center">
-                    <div class="card-body">
-                    <img class="card-img-top" src="images/gears0.png"  alt="Tutoriales básicos">
-                    <h5 class="card-title">Nivel 0</h5>
-                    <p class="card-text">Tutoriales básicos</br></p>
-                    </br>
+              <div class="card-deck">
+                <div class="card text-center">
+                  <div class="card-body">
+                  <img class="card-img-top" src="images/gears0.png"  alt="Tutoriales básicos">
+                  <h5 class="card-title">Nivel 0</h5>
+                  <p class="card-text">Tutoriales básicos</p>
+                  </div>
+                  <div class="card-footer">
                     <a href="#" class="btn btn-primary">Comenzar</a>
-                    </div>
                   </div>
                 </div>
 
-                <div class="col-sm-4">
-                  <div class="card text-center">
-                    <div class="card-body">
-                      <img class="card-img-top" src="images/nvl1.png"  alt="Card image cap">
-                      <h5 class="card-title">Nivel 1</h5>
-                      <p class="card-text">Micropiano</br> 
-                      Caballo</p>
-                      <a href="#" class="btn btn-primary">Comenzar</a>
-                    </div>
+                <div class="card text-center">
+                  <div class="card-body">
+                    <img class="card-img-top" src="images/nvl1.png"  alt="Card image cap">
+                    <h5 class="card-title">Nivel 1</h5>
+                    <p class="card-text">Micropiano</br> 
+                    Caballo</p>
+                  </div>
+                  <div class="card-footer">
+                    <a href="#" class="btn btn-primary">Comenzar</a>
                   </div>
                 </div>
-                
-                <div class="col-sm-4">
-                  <div class="card text-center">
-                    <div class="card-body">
-                      <img class="card-img-top" src="images/nvl2.png"  alt="Card image cap">
-                      <h5 class="card-title">Nivel 2</h5>
-                      <p class="card-text">Generador eléctrico</br> 
-                      Motor</p>
-                      <a href="#" class="btn btn-primary">Comenzar</a>
-                    </div>
+              
+                <div class="card text-center">
+                  <div class="card-body">
+                    <img class="card-img-top" src="images/nvl2.png"  alt="Card image cap">
+                    <h5 class="card-title">Nivel 2</h5>
+                    <p class="card-text">Generador eléctrico</br> 
+                    Motor</p>
                   </div>
-                </div>
-
-                <div class="col-sm-4">
-                  <div class="card text-center">
-                    <div class="card-body">
-                      <img class="card-img-top" src="images/nvl3.png"  alt="Card image cap">
-                      <h5 class="card-title">Nivel 3</h5>
-                      <p class="card-text">Girabot</p>
-                      </br>
-                      <a href="#" class="btn btn-primary">Comenzar</a>
-                    </div>
+                  <div class="card-footer">
+                    <a href="#" class="btn btn-primary">Comenzar</a>
                   </div>
                 </div>
 
-                <div class="col-sm-4">
-                  <div class="card text-center">
-                    <div class="card-body">
-                      <img class="card-img-top" src="images/brazo.png"  alt="Card image cap">
-                      <h5 class="card-title">Nivel 4</h5>
-                      <p class="card-text">Brazo mecánico</p>
-                      </br>
-                      <a href="#" class="btn btn-primary">Comenzar</a>
-                    </div>
+              </div>
+
+              <div class="card-deck">
+                <div class="card text-center">
+                  <div class="card-body">
+                    <img class="card-img-top" src="images/nvl3.png"  alt="Card image cap">
+                    <h5 class="card-title">Nivel 3</h5>
+                    <p class="card-text">Girabot</p>
+                  </div>
+                  <div class="card-footer">
+                    <a href="#" class="btn btn-primary">Comenzar</a>
                   </div>
                 </div>
 
-                <div class="col-sm-4">
-                  <div class="card text-center">
-                    <div class="card-body">
-                      <img class="card-img-top" src="images/carro.png"  alt="Card image cap">
-                      <h5 class="card-title">Nivel 5</h5>
-                      <p class="card-text">Carro</p>
-                      </br>
-                      <a href="#" class="btn btn-primary">Comenzar</a>
-                    </div>
+                <div class="card text-center">
+                  <div class="card-body">
+                    <img class="card-img-top" src="images/brazo.png"  alt="Card image cap">
+                    <h5 class="card-title">Nivel 4</h5>
+                    <p class="card-text">Brazo mecánico</p>  
+                  </div>
+                  <div class="card-footer">
+                    <a href="#" class="btn btn-primary">Comenzar</a>
                   </div>
                 </div>
-              </div> <!-- Row termination--> 
+
+                <div class="card text-center">
+                  <div class="card-body">
+                    <img class="card-img-top" src="images/carro.png"  alt="Card image cap">
+                    <h5 class="card-title">Nivel 5</h5>
+                    <p class="card-text">Carro</p>
+                  </div>
+                  <div class="card-footer">
+                    <a href="#" class="btn btn-primary">Comenzar</a>
+                  </div>
+                </div>
+              </div> <!-- Card-deck termination--> 
           </section> <!-- Section termination--> 
         </div>
     </body>
