Fixes to models screen

--- a/app/models.html
+++ b/app/models.html
@@ -62,9 +62,9 @@
                     <a href="#" class="btn btn-primary">Comenzar</a>
                   </div>
                 </div>
+              </div> <!-- Card-deck termination--> 
 
-              </div>
-
+              <!-- Second Card-deck--> 
               <div class="card-deck">
                 <div class="card text-center">
                   <div class="card-body">
