--- a/app/models.html
+++ b/app/models.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="sp">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-    
     <link rel="stylesheet" href="CSS/bootstrap.min.css">
     <script scr="js/bootstrap.min.js"></script>
+    <script src="js/objectsVisibility.js"></script>
     <link href="CSS/models.css" rel="stylesheet" type="text/css" >
+
     <head>
         <meta charset="UTF-8">
+        <title>Tutorial Kit Robótico</title>
     </head>
     <body>
         <div>
@@ -21,12 +23,12 @@
 
             <!-- Option's text--> 
             <div class="option">
-                Seleccioná el modelo que querás trabajar
+                Seleccioná el nivel que querás trabajar
             </div>
             </div>
 
             <!-- Display the models by levels --> 
-            <section class="models-option">
+            <section class="lvls-option">
               <div class="card-deck">
                 <div class="card text-center">
                   <div class="card-body">
@@ -47,7 +49,7 @@
                     Caballo</p>
                   </div>
                   <div class="card-footer">
-                    <a href="#" class="btn btn-primary">Comenzar</a>
+                    <a href="#" class="btn btn-primary" onclick="showOptions(true)">Comenzar</a>
                   </div>
                 </div>
               
@@ -59,7 +61,7 @@
                     Motor</p>
                   </div>
                   <div class="card-footer">
-                    <a href="#" class="btn btn-primary">Comenzar</a>
+                    <a href="#" class="btn btn-primary" onclick="showOptions(false)">Comenzar</a>
                   </div>
                 </div>
               </div> <!-- Card-deck termination--> 
