--- a/app/lvlTwo.html
+++ b/app/lvlTwo.html
@@ -13,17 +13,25 @@
         <div>
           <!-- Top of the screen. Contains a home button and an option's text--> 
           <div class="top">
-            <!-- Home button --> 
-            <div class="home">
-              <a href="home.html">
-                  <img src="images/home.png" width="35" height="35">
-              </a>
-            </div>
-
-            <!-- Option's text--> 
-            <div class="option">
-                Seleccioná el modelo que querás trabajar
-            </div>
+              <div class="row no-gutters">
+                  <div class="col-0">
+                      &nbsp;
+                      <a href="models.html">
+                          <img src="images/atras.png" width="35" height="35">
+                        </a>
+                  </div>
+                  <div class="col-0 text-right">
+                  &nbsp;
+                      <a href="home.html">
+                          <img src="images/home.png" width="35" height="35">
+                        </a>
+                  </div>
+                  <div class="col-10 text-center">
+                    <h6 class="option" >
+                      Seleccioná el modelo que querás trabajar
+                    </h6>
+                  </div>
+                </div>
             </div>
 
             <!-- Display the models by levels --> 
