--- a/app/Micropiano/description.html
+++ b/app/Micropiano/description.html
@@ -14,19 +14,17 @@
         <div>
           <!-- Top of the screen. Contains a home button and an option's text--> 
           <div class="top">
-              <div class="row no-gutters">
-                  <div class="col-0 text-right">
-                  &nbsp;
-                      <a href="home.html">
-                          <img src="images/home.png" width="35" height="35">
-                        </a>
-                  </div>
-                  <div class="col-11 text-center">
-                    <h6 class="option" >
-                      Seleccioná el nivel que querás trabajar
-                    </h6>
-                  </div>
-                </div>
+            <!-- Home button --> 
+            <div class="home">
+              <a href="home.html">
+                  <img src="images/home.png" width="35" height="35">
+              </a>
+            </div>
+
+            <!-- Option's text--> 
+            <div class="option">
+                Seleccioná el nivel que querás trabajar
+            </div>
             </div>
 
             <!-- Display the models by levels --> 
