--- a/app/models.html
+++ b/app/models.html
@@ -69,41 +69,43 @@
               </div> <!-- Card-deck termination--> 
 
               <!-- Second Card-deck--> 
-              <div class="card-deck">
-                <div class="card text-center">
-                  <div class="card-body">
-                    <img class="card-img-top" src="images/nvl3.png"  alt="Card image cap">
-                    <h5 class="card-title">Nivel 3</h5>
-                    <p class="card-text">Girabot</p>
+              <section style="margin-top:2%">
+                <div class="card-deck">
+                  <div class="card text-center">
+                    <div class="card-body">
+                      <img class="card-img-top" src="images/nvl3.png"  alt="Card image cap">
+                      <h5 class="card-title">Nivel 3</h5>
+                      <p class="card-text">Girabot</p>
+                    </div>
+                    <div class="card-footer">
+                      <a href="#" class="btn btn-primary">Comenzar</a>
+                    </div>
                   </div>
-                  <div class="card-footer">
-                    <a href="#" class="btn btn-primary">Comenzar</a>
-                  </div>
-                </div>
 
-                <div class="card text-center">
-                  <div class="card-body">
-                    <img class="card-img-top" src="images/brazo.png"  alt="Card image cap">
-                    <h5 class="card-title">Nivel 4</h5>
-                    <p class="card-text">Brazo mecánico</p>  
+                  <div class="card text-center">
+                    <div class="card-body">
+                      <img class="card-img-top" src="images/brazo.png"  alt="Card image cap">
+                      <h5 class="card-title">Nivel 4</h5>
+                      <p class="card-text">Brazo mecánico</p>  
+                    </div>
+                    <div class="card-footer">
+                      <a href="#" class="btn btn-primary">Comenzar</a>
+                    </div>
                   </div>
-                  <div class="card-footer">
-                    <a href="#" class="btn btn-primary">Comenzar</a>
-                  </div>
-                </div>
 
-                <div class="card text-center">
-                  <div class="card-body">
-                    <img class="card-img-top" src="images/carro.png"  alt="Card image cap">
-                    <h5 class="card-title">Nivel 5</h5>
-                    <p class="card-text">Carro</p>
+                  <div class="card text-center">
+                    <div class="card-body">
+                      <img class="card-img-top" src="images/carro.png"  alt="Card image cap">
+                      <h5 class="card-title">Nivel 5</h5>
+                      <p class="card-text">Carro</p>
+                    </div>
+                    <div class="card-footer">
+                      <a href="#" class="btn btn-primary">Comenzar</a>
+                    </div>
                   </div>
-                  <div class="card-footer">
-                    <a href="#" class="btn btn-primary">Comenzar</a>
-                  </div>
-                </div>
-              </div> <!-- Card-deck termination--> 
-          </section> <!-- Section termination--> 
+                </div> <!-- Card-deck termination--> 
+            </section> <!-- Second card section termination--> 
+          </section> <!-- Card decks section termination--> 
         </div>
     </body>
 </html>
