Pantallas descripción y pasos completas

--- a/app/Micropiano/Step/stepOne.html
+++ b/app/Micropiano/Step/stepOne.html
@@ -2,11 +2,7 @@
 <html lang="sp">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="../../CSS/bootstrap.min.css">
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
     <script scr="../../js/bootstrap.min.js"></script>
-    <link href="../../CSS/description.css" rel="stylesheet" type="text/css" >
     <link href="../../CSS/global-styles.css" rel="stylesheet" type="text/css" >
 
     <head>
@@ -46,27 +42,26 @@
                       </div>
                   </div>
               </div>  <!-- Container termination-->
+          </section> <!-- Section termination--> 
 
-            <!-- Bottom -->
-            <section style="margin-top:2%">
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="col-md-auto">
-                            <a class="btn btn-primary" href="../description.html" role="button">&laquo; Anterior</a>
-                        </div>
-                        <div class="col">
-                            <div class="progress progress-position">
-                                <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                        </div>
-                        <div class="col-md-auto text-right">
-                            <a class="btn btn-primary" href="#" role="button">Siguiente &raquo;</a>
+          <!-- Bottom -->
+          <section class="bottom-bar max-size">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-auto">
+                        <a class="btn btn-primary" href="../description.html" role="button">&laquo; Anterior</a>
+                    </div>
+                    <div class="col">
+                        <div class="progress progress-position">
+                            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
+                    <div class="col-md-auto text-right">
+                        <a class="btn btn-primary" href="#" role="button">Siguiente &raquo;</a>
+                    </div>
                 </div>
-            </section> <!-- Bottom section termination-->
-
-          </section> <!-- Section termination--> 
+            </div>
+        </section> <!-- Bottom section termination-->
         </div>
     </body>
 </html>
