--- a/app/Micropiano/description.html
+++ b/app/Micropiano/description.html
@@ -2,11 +2,8 @@
 <html lang="sp">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="../CSS/bootstrap.min.css">
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script scr="../js/bootstrap.min.js"></script>
-    <link href="../CSS/description.css" rel="stylesheet" type="text/css" >
+    <script scr="../../js/bootstrap.min.js"></script>
+    <link href="../CSS/global-styles.css" rel="stylesheet" type="text/css" >
 
     <head>
         <meta charset="UTF-8">
@@ -33,14 +30,14 @@
           </div>
 
           <!-- Display the models description -->
-            <section>
+            <section class="center-content">
               <div class="container-fluid">
                   <div class="row">
                       <div class="col-12 mt-3">
                           <div class="card">
                               <div class="card-horizontal">
                                   <div class="img-square-wrapper">
-                                      <img src="../images/micropiano.jpg" alt="Micropiano">
+                                      <img class="image-size" src="../images/micropiano.jpg" alt="Micropiano">
                                   </div>
                                   <div class="card-body">
                                       <h4 class="card-title">Micropiano</h4>
@@ -73,15 +70,14 @@
                       </div>
                   </div>
               </div>  <!-- Container termination-->
-
-            <!-- Bottom -->
-            <section class="description-bottom top-margin">
-                    <section class="next-button">
-                        <a class="btn btn-primary" href="Step/stepOne.html" role="button">Siguiente &raquo;</a>
-                    </section>
-            </section> <!-- Bottom section termination-->
-
-          </section> <!-- Section termination--> 
+          </section> <!-- Section termination-->
+          
+          <!-- Bottom -->
+          <section class="max-size bottom-bar">
+                <section class="next-button">
+                    <a class="btn btn-primary" href="Step/stepOne.html" role="button">Siguiente &raquo;</a>
+                </section>
+        </section> <!-- Bottom section termination-->
         </div>
     </body>
 </html>
