Cambios menores a pantalla de opciones

--- a/app/lvlTwo.html
+++ b/app/lvlTwo.html
@@ -6,6 +6,7 @@
     <script scr="js/bootstrap.min.js"></script>
     <script scr="js/objectsVisibility.js"></script>
     <link href="CSS/models.css" rel="stylesheet" type="text/css" >
+    <link href="CSS/global-styles.css" rel="stylesheet" type="text/css" >
     <head>
         <meta charset="UTF-8">
     </head>
