Pantallas de description y componentDescription enlazadas.

--- a/app/ComponentDescription.html
+++ b/app/ComponentDescription.html
@@ -24,7 +24,7 @@
             No se necesitan drivers para Linux o Mac (el archivo inf para Windows es necesario y está incluido en el IDE de Arduino).
         </p>
     </div>
-    <div class="fab" href="home.html"><a href="home.html"> <i class="fa fa-arrow-left fa-3x"> </i> </a></div>
+    <div class="fab"><a href="Micropiano/description.html"> <i class="fa fa-arrow-left fa-3x"> </i> </a></div>
 </div>
 
 <script src="js/index.js"></script>
