--- a/app/Micropiano/description.html
+++ b/app/Micropiano/description.html
@@ -46,9 +46,9 @@
                               </div>
                               <div class="card-footer">
                                   <ul class="list-group">
-                                    <a class="list-group-item-action" href="#">
+                                    <a class="list-group-item-action" href="../ComponentDescription.html">
                                         <li class="list-group-item d-flex justify-content-between align-items-center">
-                                        Componente 1 
+                                        Arduino
                                         <span class="badge badge-primary badge-pill">3</span>
                                       </li>
                                     </a>
