--- a/app/Micropiano/Step/stepOne.html
+++ b/app/Micropiano/Step/stepOne.html
@@ -35,7 +35,7 @@
                                   </div>
                                   <div class="card-body">
                                       <h4 class="card-title">Paso 1</h4>
-                                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                      <p class="card-text">Descripción breve del procedimiento actual</p>
                                   </div>
                               </div>
                           </div>  <!-- Card termination--> 
