Cambio de carpetas

--- a/app/description.html
+++ b/app/description.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="sp">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-    <link rel="stylesheet" href="../CSS/bootstrap.min.css">
+    <link rel="stylesheet" href="CSS/bootstrap.min.css">
     <script scr="../../js/bootstrap.min.js"></script>
-    <link href="../CSS/global-styles.css" rel="stylesheet" type="text/css" >
+    <link href="CSS/global-styles.css" rel="stylesheet" type="text/css" >
 
     <head>
         <meta charset="UTF-8">
@@ -31,14 +31,14 @@
             <div class="row no-gutters">
               <div class="col-0">
                   &nbsp;
-                  <a href="../lvlOne.html">
-                      <img src="../images/atras.png" width="35" height="35">
+                  <a href="lvlOne.html">
+                      <img src="images/atras.png" width="35" height="35">
                     </a>
               </div>
               <div class="col-0 text-right">
               &nbsp;
-                  <a href="../home.html">
-                      <img src="../images/home.png" width="35" height="35">
+                  <a href="home.html">
+                      <img src="images/home.png" width="35" height="35">
                     </a>
               </div>
             </div>
@@ -52,7 +52,7 @@
                           <div class="card">
                               <div class="card-horizontal">
                                   <div class="img-square-wrapper">
-                                      <img class="image-size" src="../images/micropiano.jpg" alt="Micropiano">
+                                      <img class="image-size" src="images/micropiano.jpg" alt="Micropiano">
                                   </div>
                                   <div class="card-body">
                                       <h4 class="card-title">Micropiano</h4>
@@ -61,7 +61,7 @@
                               </div>
                               <div class="card-footer">
                                   <ul class="list-group">
-                                    <a class="list-group-item-action" href="../ComponentDescription.html">
+                                    <a class="list-group-item-action" href="ComponentDescription.html">
                                         <li class="list-group-item d-flex justify-content-between align-items-center">
                                         Arduino
                                         <span class="badge badge-primary badge-pill">3</span>
@@ -90,7 +90,7 @@
           <!-- Bottom -->
           <section class="max-size bottom-bar">
                 <section class="next-button">
-                    <a class="btn btn-primary" href="Step/stepOne.html" role="button">Siguiente &raquo;</a>
+                    <a class="btn btn-primary" href="step.html" role="button">Siguiente &raquo;</a>
                 </section>
         </section> <!-- Bottom section termination-->
         </div>
