--- a/app/step.html
+++ b/app/step.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="sp">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-    <link rel="stylesheet" href="../../CSS/bootstrap.min.css">
+    <link rel="stylesheet" href="CSS/bootstrap.min.css">
     <script scr="../../js/bootstrap.min.js"></script>
-    <link href="../../CSS/global-styles.css" rel="stylesheet" type="text/css" >
+    <link href="CSS/global-styles.css" rel="stylesheet" type="text/css" >
 
     <head>
         <meta charset="UTF-8">
@@ -17,7 +17,7 @@
               <div class="col-0">
                   &nbsp;
                   <a href="../lvlOne.html">
-                      <img src="../../images/home.png" width="35" height="35">
+                      <img src="images/home.png" width="35" height="35">
                     </a>
               </div>
             </div>
@@ -31,7 +31,7 @@
                           <div class="card">
                               <div class="card-horizontal">
                                   <div class="img-square-wrapper">
-                                      <img class="image-size" src="../../images/micropiano.jpg" alt="Micropiano">
+                                      <img class="image-size" src="images/micropiano.jpg" alt="Micropiano">
                                   </div>
                                   <div class="card-body">
                                       <h4 class="card-title">Paso 1</h4>
@@ -49,7 +49,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-md-auto">
-                        <a class="btn btn-primary" href="../description.html" role="button">&laquo; Anterior</a>
+                        <a class="btn btn-primary" href="description.html" role="button">&laquo; Anterior</a>
                     </div>
                     <div class="col">
                         <div class="progress progress-position">
