--- a/app/description.html
+++ b/app/description.html
@@ -4,27 +4,14 @@
     <link rel="stylesheet" href="CSS/bootstrap.min.css">
     <script scr="../../js/bootstrap.min.js"></script>
     <link href="CSS/global-styles.css" rel="stylesheet" type="text/css" >
+    <script src="js/models.js"></script>
 
     <head>
         <meta charset="UTF-8">
         <title>Tutorial Kit Robótico</title>
-        <script type="text/javascript">
-            function loadModel()
-            {
-                if( localStorage.getItem("model") == "1")
-                {
-                    document.getElementById('message').innerHTML = "Valor de variable con modelo 1";
-                    console.log("El item es 1");
-                }
-                else
-                {
-                    document.getElementById('message').innerHTML = "Valor de variable con modelo 2";
-                    console.log("El item es 2");
-                }
-            }
-        </script>
     </head>
-    <body onload="loadModel();">
+
+    <body onload="init();">
         <div>
           <!-- Top of the screen. Contains a home button and an option's text--> 
           <div class="top">
@@ -54,8 +41,8 @@
                                   <div class="img-square-wrapper">
                                       <img class="image-size" src="images/micropiano.jpg" alt="Micropiano">
                                   </div>
-                                  <div class="card-body">
-                                      <h4 class="card-title">Micropiano</h4>
+                                  <div class="card-body sizecard">
+                                      <h4 class="card-title" id="desc-model-title"></h4>
                                       <p class="card-text" id='message'></p>
                                   </div>
                               </div>
