--- a/app/lvlOne.html
+++ b/app/lvlOne.html
@@ -6,6 +6,8 @@
     <script scr="js/bootstrap.min.js"></script>
     <script scr="js/objectsVisibility.js"></script>
     <link href="CSS/models.css" rel="stylesheet" type="text/css" >
+    <script src="js/models.js"></script>
+
     <head>
         <meta charset="UTF-8">
     </head>
@@ -45,7 +47,7 @@
                     <h5 class="card-title">Micropiano</h5>
                   </div>
                   <div class="card-footer">
-                    <a href="Micropiano/description.html" class="btn btn-primary">Comenzar</a>
+                    <a href="description.html" class="btn btn-primary" onclick="setModel(1)">Comenzar</a>
                   </div>
                 </div>
 
@@ -55,7 +57,7 @@
                     <h5 class="card-title">Caballo</h5>
                   </div>
                   <div class="card-footer">
-                    <a href="#" class="btn btn-primary">Comenzar</a>
+                    <a href="description.html" class="btn btn-primary" onclick="setModel(2)">Comenzar</a>
                   </div>
                 </div>
               </div> <!-- Card-deck termination--> 
