--- a/app/lvlTwo.html
+++ b/app/lvlTwo.html
@@ -46,7 +46,7 @@
                     <h5 class="card-title">Generador Eléctrico</h5>
                   </div>
                   <div class="card-footer">
-                    <a href="#" class="btn btn-primary">Comenzar</a>
+                    <a href="description.html" class="btn btn-primary" onclick="setModel(3)">Comenzar</a>
                   </div>
                 </div>
 
@@ -56,7 +56,7 @@
                     <h5 class="card-title">Motor</h5>
                   </div>
                   <div class="card-footer">
-                    <a href="#" class="btn btn-primary">Comenzar</a>
+                    <a href="description.html" class="btn btn-primary" onclick="setModel(4)">Comenzar</a>
                   </div>
                 </div>
               </div> <!-- Card-deck termination--> 
