--- a/app/models.html
+++ b/app/models.html
@@ -58,7 +58,7 @@
                     Caballo</p>
                   </div>
                   <div class="card-footer">
-                    <a href="#" class="btn btn-primary" onclick="showOptions(true);setModel(1);">Comenzar</a>
+                    <a href="#" class="btn btn-primary" onclick="showOptions(true);">Comenzar</a>
                   </div>
                 </div>
 
