--- a/app/description.html
+++ b/app/description.html
@@ -47,25 +47,8 @@
                                   </div>
                               </div>
                               <div class="card-footer">
-                                  <ul class="list-group">
-                                    <a class="list-group-item-action" href="ComponentDescription.html">
-                                        <li class="list-group-item d-flex justify-content-between align-items-center">
-                                        Arduino
-                                        <span class="badge badge-primary badge-pill">3</span>
-                                      </li>
-                                    </a>
-                                    <a class="list-group-item-action" href="#">
-                                        <li class="list-group-item d-flex justify-content-between align-items-center">
-                                        Componente 2 
-                                        <span class="badge badge-primary badge-pill">1</span>
-                                        </li>
-                                    </a>
-                                    <a class="list-group-item-action" href="#">
-                                        <li class="list-group-item d-flex justify-content-between align-items-center">
-                                        Componente n 
-                                        <span class="badge badge-primary badge-pill">1</span>
-                                        </li>
-                                    </a>
+                                  <ul class="list-group" id="desc-model-component">
+
                                 </ul>
                               </div>
                           </div>  <!-- Card termination--> 
