--- a/app/description.html
+++ b/app/description.html
@@ -38,8 +38,7 @@
                       <div class="col-12 mt-3">
                           <div class="card">
                               <div class="card-horizontal">
-                                  <div class="img-square-wrapper">
-                                      <img class="image-size" src="images/micropiano.jpg" alt="Micropiano">
+                                  <div class="img-square-wrapper" id="desc-img">
                                   </div>
                                   <div class="card-body sizecard">
                                       <h4 class="card-title" id="desc-model-title"></h4>
