--- a/app/lvlOne.html
+++ b/app/lvlOne.html
@@ -47,7 +47,7 @@
                     <h5 class="card-title">Micropiano</h5>
                   </div>
                   <div class="card-footer">
-                    <a href="description.html" class="btn btn-primary" onclick="setModel(1)">Comenzar</a>
+                    <a href="description.html" class="btn btn-primary" onclick="setModel('Micropiano')">Comenzar</a>
                   </div>
                 </div>
 
